--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bigproject",
   "version": "1.0.0",
   "description": "bigproject backend",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js"
@@ -14,6 +14,7 @@
   "author": "sahil naik",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.1"
   }
 }
